JumpScript/tests/baselines/reference/blockScopedBindingUsedBeforeDef.errors.txt
tests/cases/compiler/blockScopedBindingUsedBeforeDef.jump(2,12): error TS2448: Block-scoped variable 'a' used before its declaration.
tests/cases/compiler/blockScopedBindingUsedBeforeDef.jump(5,12): error TS2448: Block-scoped variable 'a' used before its declaration.
tests/cases/compiler/blockScopedBindingUsedBeforeDef.jump(5,35): error TS7027: Unreachable code detected.
tests/cases/compiler/blockScopedBindingUsedBeforeDef.jump(8,7): error TS2448: Block-scoped variable 'b' used before its declaration.


==== tests/cases/compiler/blockScopedBindingUsedBeforeDef.jump (4 errors) ====
    // 1:
    for (let {[a]: a} of [{ }]) continue;
               ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
    
    // 2:
    for (let {[a]: a} = { }; false; ) continue;
               ~
!!! error TS2448: Block-scoped variable 'a' used before its declaration.
                                      ~~~~~~~~
!!! error TS7027: Unreachable code detected.
    
    // 3:
    let {[b]: b} = { };
          ~
!!! error TS2448: Block-scoped variable 'b' used before its declaration.